5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_2425.log
== TEST (2019-04-10 02:09:14) 
-- CODE:
d=float(input("distancia:"))
c=float(input("combustivel gasto:"))
consumo=d/c
print(round(consumo,3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(consumo,3"km/l"))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:09:40) 
-- CODE:
d=float(input("distancia:"))
c=float(input("combustivel gasto:"))
consumo=d/c
print(round(consumo,3)"km/l")
-- EXECUTION TIME:
0.138974
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 4
    print(round(consumo,3)"km/l")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:09:43) 
-- CODE:
d=float(input("distancia:"))
c=float(input("combustivel gasto:"))
consumo=d/c
print(round(consumo,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo,3)"km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:10:03) 
-- CODE:
d=float(input("distancia:"))
c=float(input("combustivel gasto:"))
consumo=d/c
print(round(consumo,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:10:21) 
-- CODE:
d=float(input("distancia:"))
c=float(input("combustivel gasto:"))
consumo=d/c
print(round(consumo,3),"km/l")
-- EXECUTION TIME:
0.154336
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
